crates/shell-parser/tests/snapshots/parser_snapshots__quoting__backslash_escape_outside_quotes.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"echo hello\\\\ world\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "hello",
                    ),
                    Literal(
                        " world",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
