crates/shell-parser/tests/snapshots/parser_snapshots__quoting__double_quotes_with_variable.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo \\\"hello $USER\\\"\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    DoubleQuoted(
                        [
                            Literal(
                                "hello ",
                            ),
                            Parameter(
                                "USER",
                            ),
                        ],
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
