crates/shell-parser/tests/snapshots/parser_snapshots__quoting__mixed_quoting.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo 'hello '\\\"$USER\\\"' world'\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    SingleQuoted(
                        "hello ",
                    ),
                    DoubleQuoted(
                        [
                            Parameter(
                                "USER",
                            ),
                        ],
                    ),
                    SingleQuoted(
                        " world",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
