crates/shell-parser/tests/snapshots/parser_snapshots__quoting__single_quotes_preserve_literal.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo '$HOME is not expanded'\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    SingleQuoted(
                        "$HOME is not expanded",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
